Attempt to fix menu toggle on ios

--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -19,6 +19,8 @@
   -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 0.5rem 1rem;
+
+  perspective: 900000px;
 }
 
 .navbar .menu-toggler {
